--- a/Kubernetes/ingress.yaml
+++ b/Kubernetes/ingress.yaml
@@ -7,9 +7,8 @@ metadata:
   labels:
     app: nginx-ingress-microk8s
   annotations:
-    # kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/default-backend: service1
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1 # /$1 is needed to be able to reach controller's actions in sub-routes, e.g. users/all or users/{id}
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
 spec:
   ingressClassName: nginx
@@ -18,7 +17,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/service1/(.*)"
+            path: "/service1/(.*)" # /(.*) is needed to be able to reach controller's actions in sub-routes, e.g. users/all or users/{id}
             backend:
               service:
                 name: service1
@@ -28,7 +27,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/service2"
+            path: "/service2/(.*)"
             backend:
               service:
                 name: service2
