--- a/Kubernetes/service-2.yml
+++ b/Kubernetes/service-2.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: service2
-  namespace: bookclub
+  namespace: my-namespace
 spec:
   replicas: 1
   selector:
@@ -24,7 +24,7 @@ spec:
             - name: ASPNETCORE_ENVIRONMENT
               value: Development
             - name: HELLOCONTAINERS_MESSAGE
-              value: 'Hello from Service 2!'
+              value: "Hello from Service 2!"
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
@@ -34,7 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: service2
-  namespace: bookclub
+  namespace: my-namespace
 spec:
   ports:
     - name: http
