switched to workstation gc

--- a/hellocontainers/hellocontainers.csproj
+++ b/hellocontainers/hellocontainers.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>54098248-cd59-49fb-b913-7b12854c0d5c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
 
   <ItemGroup>
